# event-schemas_eventbridge-handler

./: pyproject.toml
event_handler/: __init__.py  client.py
eventbridge_handler/: client.py
tests/: test_handler.py
