[tool.poetry]
name = "eventbridge-handler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.23"
botocore = "^1.20.23"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
moto = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
